--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource/inter": "^4.5.12",
     "astro": "^1.1.5"
   },
   "devDependencies": {
